# autoclicker-cxx

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
vendors/XInputSimulator/: CMakeLists.txt
